<resources>
    <string name="app_name">SystemUpdate</string>

    <string name="attr_os_name" translatable="false">Android</string>
    <string name="attr_update_channel_url" translatable="false">https://cjybyjk.github.io/updates.json</string>
    <string name="attr_user_agent" translatable="false">SystemUpdater</string>
    <string name="attr_prop_os_version" translatable="false">ro.build.version.release</string>
    <string name="attr_prop_update_channel_url" translatable="false">ro.updater.channel_url</string>

    <string name="header_os_version">Version: %1$s</string>
    <string name="header_last_check">Last check at: %1$s</string>

    <string name="list_no_updates">No new updates found. To manually check for new updates, use the Refresh button.</string>

    <string name="title_update_desc">WHAT\'s NEW</string>
    <string name="title_activity_settings">Settings</string>

    <string name="text_update_type_incremental">Incremental</string>
    <string name="text_update_type_full">Full</string>

    <string name="card_update_type">Type: %1$s</string>
    <string name="card_update_size">Size: %1$s</string>
    <string name="card_update_time">Time: %1$s</string>

    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">Delete the selected update file?</string>
    <string name="confirm_verify_dialog_title">Verification failed</string>
    <string name="confirm_verify_dialog_message">The verification of this update failed, and installing it may cause the device to work abnormally. Would you like to proceed?</string>
    <string name="confirm_reboot_dialog_title">Reboot to install the update</string>
    <string name="confirm_reboot_dialog_message">The device will reboot to install the update. Would you like to proceed?</string>
    <string name="confirm_mobile_network_warning_title">Mobile data warning</string>
    <string name="confirm_mobile_network_warning_message">You\'re about to download an update package using mobile data which is likely going to cause high data usage. Would you like to proceed?</string>

    <string name="snack_updates_check_failed">The update check failed. Please check your internet connection and try again later.</string>
    <string name="snack_file_deleted">File deleted.</string>
    <string name="snack_file_deletion_failed">File deletion failed</string>
    <string name="snack_file_not_exist">File does not exist.</string>
    <string name="snack_url_copied">Update URL has been copied to clipboard</string>
    <string name="snack_url_copy_failed">Failed to copy update URL to clipboard</string>
    
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_delete_file">Delete file</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_cancel_download">Cancel download</string>
    <string name="menu_cancel_install">Cancel installation</string>

    <string name="status_starting">Starting</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_paused">Paused</string>
    <string name="status_downloaded">Downloaded</string>
    <string name="status_download_failed">Download Failed</string>
    <string name="status_verifying">Verifying</string>
    <string name="status_verification_failed">Verification Failed</string>
    <string name="status_verified">Verified</string>
    <string name="status_installing">Installing</string>
    <string name="status_installation_suspended">Installation Suspended</string>
    <string name="status_installation_failed">Installation Failed</string>
    <string name="status_installed">Installed</string>
    <string name="status_installation_cancelled">Installation Cancelled</string>

    <string name="setting_auto_update">Auto update</string>
    <string name="setting_auto_updates_check">Auto updates check</string>
    <string name="setting_auto_updates_check_interval_daily">Once a day</string>
    <string name="setting_auto_updates_check_interval_weekly">Once a week</string>
    <string name="setting_auto_updates_check_interval_monthly">Once a month</string>
    <string name="setting_auto_updates_check_interval_never">Never</string>
    <string name="setting_auto_updates_download">Auto updates download</string>
    <string name="setting_auto_updates_download_wifi">Use WiFi</string>
    <string name="setting_auto_updates_download_data">Use Data Network</string>
    <string name="setting_auto_updates_download_wifi_and_data">Use WiFi and Data Network</string>
    <string name="setting_auto_updates_download_never">Never</string>
    <string name="setting_download_settings">Download Settings</string>
    <string name="setting_update_type">Update type</string>
    <string name="setting_update_type_all">All</string>
    <string name="setting_mobile_network_warning">Mobile data network warning</string>
    <string name="setting_save_path">Download path</string>
    <string name="setting_user_agent">User Agent</string>
    <string name="setting_update_settings">Update settings</string>
    <string name="setting_update_channel">Update channel</string>
    <string name="setting_auto_delete_updates">Delete updates when installed</string>
    <string name="setting_clean_cache_after_update">Clean cache when installed</string>
    <string name="setting_clean_cache_after_update_summary">Clean Dalvik/ART cache when installed</string>
    <string name="setting_append_ors_title">Append OpenRecoveryScript</string>
    
    
    <string name="notification_channel_updates_found">Found updates</string>
    <string name="notification_channel_updates_downloading">Downloading updates</string>
    <string name="notification_channel_updates_install">Installing updates</string>
    
    <string name="notification_title_new_update_found">Found new updates</string>
    <string name="notification_text_new_update_found">Found update %1$s</string>
    <string name="notification_titie_update_downloading">Downloading update</string>
    <string name="notification_text_update_downloading">Downloading update %1$s (%2$s)</string>
    <string name="notification_titie_update_downloading_failed">Update download failed</string>
    <string name="notification_text_update_downloading_failed">Update %1$s download failed</string>
    <string name="notification_titie_update_verifying">Verifying update</string>
    <string name="notification_text_update_verifying">Verifying %1$s</string>
    <string name="notification_titie_update_verifying_failed">Update verification failed</string>
    <string name="notification_text_update_verify_failed">Update %1$s verification failed</string>
    <string name="notification_titie_update_verifying_succeed">Update verification succeeded</string>
    <string name="notification_text_update_verify_succeed">Update %1$s verified successfully</string>
    <string name="notification_title_update_installing">Installing update</string>
    <string name="notification_text_update_installing">Installing %1$s (%2$s)</string>
    <string name="notification_title_update_install_success">Update installation succeeded</string>
    <string name="notification_text_update_install_success">Update %1$s installed successfully</string>
    <string name="notification_title_update_install_failed">Update installation failed</string>
    <string name="notification_text_update_install_failed">Update %1$s installation failed</string>

</resources>
